<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo_description"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image_logo"
        android:layout_marginBottom="16dp"
        android:layout_toRightOf="@+id/image_logo"
        android:paddingLeft="20dp"
        android:text="@string/sms_to_picture_by_email"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/image_logo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mobile_number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/email_address"
        android:layout_marginRight="20dp"
        android:background="@drawable/blue_button"
        android:text="@string/save"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/test"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/intro_text"
        android:textColor="#8B9FCC" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="Check http://google.com"
        android:textColor="#8B9FCC" />

    <TextView
        android:id="@+id/last_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/link"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/save"
        android:layout_below="@+id/save"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/blue_button"
        android:text="Test"
        android:textColor="#FFFFFF" />

</RelativeLayout>